# pip-check-reqs

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  find_missing_reqs.py  pyproject.toml  requirements.txt  setup.py  spelling_private_dict.txt  test-requirements.txt  test_find_missing_reqs.py  tox.ini
.claude/plugins/pyright-lsp/: .lsp.json
.claude/plugins/pyright-lsp/.claude-plugin/: plugin.json
.github/workflows/: ci.yml  dependabot-merge.yml  lint.yml
pip_check_reqs/: __init__.py  common.py  find_extra_reqs.py  find_missing_reqs.py
pip_missing_reqs/: find_missing_reqs.py  test_find_missing_reqs.py
tests/: gbk.py  package_info_mock.py  test_common.py  test_find_extra_reqs.py  test_find_missing_reqs.py  utf8.py
tests/anylizeFiles/: gbk.py  utf8.py
